Add menu option for lab 4

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         menu: 
           - text: Lab 3
             href: 02_assignments/lab-03.qmd
+          - text: Lab 4
+            href: 02_assignments/lab-04.qmd
       - text: Resources
         menu: 
           - text: Descriptive Statistics
