Adding lab 5, fixing alt text for images on lab 4

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,8 @@ website:
             href: 02_assignments/lab-03.qmd
           - text: Lab 4
             href: 02_assignments/lab-04.qmd
+          - text: Lab 5
+            href: 02_assignments/lab-05.qmd
       - text: Resources
         menu: 
           - text: Descriptive Statistics
