--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,8 @@ website:
             href: 02_assignments/lab-05.qmd
           - text: Lab 6
             href: 02_assignments/lab-06.qmd
+          - text: Lab 7
+            href: 02_assignments/lab-07.qmd
           - text: T Tests Mini Lab
             href: 02_assignments/mini_lab-ttests.qmd
       - text: Resources
